<?xml version="1.0"?>
<package>
  <name>youbot_draw</name>
  <version>0.0.0</version>
  <description>The youbot_draw package</description>
  <maintainer email="chao.yao@tu-dresden.de">chao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>brics_actuator</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
